tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__box_whisker_chart_frame_label.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"BoxWhiskerChart[{{12, 15, 18, 22}, {8, 10, 14, 16}}, FrameLabel -> {\"X Axis\", \"Y Axis\"}]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="499,100 499,1909 "/>
<text x="420" y="1896" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1896 499,1896 "/>
<text x="420" y="1785" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1785 499,1785 "/>
<text x="420" y="1673" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1673 499,1673 "/>
<text x="420" y="1562" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
10
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1562 499,1562 "/>
<text x="420" y="1451" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1451 499,1451 "/>
<text x="420" y="1339" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1339 499,1339 "/>
<text x="420" y="1228" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1228 499,1228 "/>
<text x="420" y="1116" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1116 499,1116 "/>
<text x="420" y="1005" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
15
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1005 499,1005 "/>
<text x="420" y="894" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,894 499,894 "/>
<text x="420" y="782" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,782 499,782 "/>
<text x="420" y="671" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,671 499,671 "/>
<text x="420" y="559" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,559 499,559 "/>
<text x="420" y="448" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
20
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,448 499,448 "/>
<text x="420" y="337" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,337 499,337 "/>
<text x="420" y="225" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,225 499,225 "/>
<text x="420" y="114" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,114 499,114 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="500,1910 3499,1910 "/>
<line x1="460.0" y1="1562.3" x2="430.0" y2="1562.3" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="1005.0" x2="430.0" y2="1005.0" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="447.7" x2="430.0" y2="447.7" stroke="#666" stroke-width="10"/>
<line x1="1250.0" y1="1910.0" x2="1250.0" y2="1980.0" stroke="#666" stroke-width="10"/>
<line x1="2750.0" y1="1910.0" x2="2750.0" y2="1980.0" stroke="#666" stroke-width="10"/>
<line x1="1250.0" y1="224.8" x2="1250.0" y2="1339.4" stroke="#666" stroke-width="5.4"/>
<line x1="1025.0" y1="224.8" x2="1475.0" y2="224.8" stroke="#666" stroke-width="5.4"/>
<line x1="1025.0" y1="1339.4" x2="1475.0" y2="1339.4" stroke="#666" stroke-width="5.4"/>
<rect x="800.0" y="447.7" width="900.0" height="724.4" fill="rgb(94,129,181)" stroke="#666" stroke-width="5.4"/>
<line x1="800.0" y1="837.8" x2="1700.0" y2="837.8" stroke="white" stroke-width="8.1"/>
<line x1="2750.0" y1="893.5" x2="2750.0" y2="1785.2" stroke="#666" stroke-width="5.4"/>
<line x1="2525.0" y1="893.5" x2="2975.0" y2="893.5" stroke="#666" stroke-width="5.4"/>
<line x1="2525.0" y1="1785.2" x2="2975.0" y2="1785.2" stroke="#666" stroke-width="5.4"/>
<rect x="2300.0" y="1005.0" width="900.0" height="668.7" fill="rgb(94,129,181)" stroke="#666" stroke-width="5.4"/>
<line x1="2300.0" y1="1339.4" x2="3200.0" y2="1339.4" stroke="white" stroke-width="8.1"/>
<text x="2000.0" y="2075.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="110" fill="#666">X Axis</text>
<text x="188.0" y="1005.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="110" fill="#666" transform="rotate(-90,188.0,1005.0)">Y Axis</text>
</svg>
