tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__box_whisker_chart_styled_plot_label.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"BoxWhiskerChart[{1, 2, 3, 4, 5}, PlotLabel -> Style[\"Styled Title\", Bold, Italic]]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="499,250 499,2069 "/>
<text x="420" y="2022" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,2022 499,2022 "/>
<text x="420" y="1944" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
1
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1944 499,1944 "/>
<text x="420" y="1866" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1866 499,1866 "/>
<text x="420" y="1787" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1787 499,1787 "/>
<text x="420" y="1709" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1709 499,1709 "/>
<text x="420" y="1630" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1630 499,1630 "/>
<text x="420" y="1552" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1552 499,1552 "/>
<text x="420" y="1474" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1474 499,1474 "/>
<text x="420" y="1395" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1395 499,1395 "/>
<text x="420" y="1317" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1317 499,1317 "/>
<text x="420" y="1238" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1238 499,1238 "/>
<text x="420" y="1160" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
3
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1160 499,1160 "/>
<text x="420" y="1082" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1082 499,1082 "/>
<text x="420" y="1003" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,1003 499,1003 "/>
<text x="420" y="925" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,925 499,925 "/>
<text x="420" y="846" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,846 499,846 "/>
<text x="420" y="768" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
4
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,768 499,768 "/>
<text x="420" y="690" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,690 499,690 "/>
<text x="420" y="611" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,611 499,611 "/>
<text x="420" y="533" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,533 499,533 "/>
<text x="420" y="454" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,454 499,454 "/>
<text x="420" y="376" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="145.16129032258064" opacity="1" fill="#666666">
5
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="459,376 499,376 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="500,2070 3499,2070 "/>
<line x1="460.0" y1="1944.5" x2="430.0" y2="1944.5" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="1552.2" x2="430.0" y2="1552.2" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="1160.0" x2="430.0" y2="1160.0" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="767.8" x2="430.0" y2="767.8" stroke="#666" stroke-width="10"/>
<line x1="460.0" y1="375.5" x2="430.0" y2="375.5" stroke="#666" stroke-width="10"/>
<line x1="2000.0" y1="2070.0" x2="2000.0" y2="2140.0" stroke="#666" stroke-width="10"/>
<line x1="2000.0" y1="375.5" x2="2000.0" y2="1944.5" stroke="#666" stroke-width="5.4"/>
<line x1="1550.0" y1="375.5" x2="2450.0" y2="375.5" stroke="#666" stroke-width="5.4"/>
<line x1="1550.0" y1="1944.5" x2="2450.0" y2="1944.5" stroke="#666" stroke-width="5.4"/>
<rect x="1100.0" y="669.7" width="1800.0" height="980.6" fill="rgb(94,129,181)" stroke="#666" stroke-width="5.4"/>
<line x1="1100.0" y1="1160.0" x2="2900.0" y2="1160.0" stroke="white" stroke-width="8.1"/>
<text x="2000.0" y="185.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="130" fill="#333" font-weight="bold" font-style="italic">Styled Title</text>
</svg>
